# radio-sk

./: CMakeLists.txt  LICENSE  README.md
src/: Makefile  client.cc  proxy.cc
src/client/: io.h  main.h  menu.h  proxies_handler_socket.h  proxies_pool.h  sender.h  srp_receiver.h  state.h  stdout_metadata_proxy.h  telnet_controller.h
src/proxy/: audio_sender.h  clients_handler_socket.h  clients_pool.h  content_dispatcher.h  main.h  proxy.h  proxy_server.h
src/utils/: addr.h  address_pool.h  exceptions.h  icy.h  proxy.h  receiver.h  sik_radio_protocol.h  socket_wrapper.h  tcp.h  types.h  udp.h
